# altel_rbcp

./: CMakeLists.txt
common/: CMakeLists.txt
common/rapidjson/: myrapidjson.h
eudaq/: CMakeLists.txt
gl/: CMakeLists.txt  README.md  TelescopeGL_main.cxx  my_telescope_gl.cc  myfit_main.cc  note.txt  opengl_main.cc  telescope_main.cc
gl/include/: TelescopeGL.hh  TelescopeViewer.hh
gl/src/: TelescopeGL.cc  TelescopeGL_shaders.cc
jsonfile/: alpide_configure.json  reader.json  reg_cmd_list.json  telescope.json
jsononly/cluster/: cluster.cxx
jsononly/correlation/: correlation.cxx  correlationROOT.cxx
jsononly/efficiency/: efficency.cxx  efficiency.cxx
jsononly/mask/: mask_filter.cxx
reader/: CMakeLists.txt  TelescopeViewer_linefit.cxx  TelescopeViewer_main.cxx
telescope/: CMakeLists.txt
telescope/exe/: FirmwarePortal_main.cc  rbcp_main.cc  telescope_main.cc
telescope/include/: AltelFileReaderJSON.hh  AltelReader.hh  ClusterPool.hh  FirmwarePortal.hh  JadeDataFrame.hh  Telescope.hh
telescope/rbcp/: rbcp.cc
telescope/src/: AltelReader.cc  ClusterPool.cc  FirmwarePortal.cc  JadeDataFrame.cc  Telescope.cc
web/: websockets_main.cc
web/mount-origin/: colorblocks.js  example.js  index.css  index.html  mitm.html  style.css
web/mount-origin/js/: main.js  mitm.js  myplot.js  openTAB.js
